fix arts carousel to show thumb position correctly on mobile, bring artist headlines in line with authors, add month name to home view feature, change scroll to auto on lit reader menu

--- a/src/app/globalView/artsView/artsArtist/artsArtist.component.less
+++ b/src/app/globalView/artsView/artsArtist/artsArtist.component.less
@@ -6,6 +6,18 @@
     margin-bottom: @hMargin;
   }
 
+  h1 {
+
+    .fname {
+      color: darken(@mainTextColor, 10%);
+      font-weight: normal;
+    }
+
+    .lname {
+      font-weight: bold;
+    }
+  }
+
   .imageGrid {
     display: flex;
     flex-flow: row wrap;
