--- a/src/app/globalView/literatureView/literatureDisplay/literatureDisplay.component.less
+++ b/src/app/globalView/literatureView/literatureDisplay/literatureDisplay.component.less
@@ -153,7 +153,7 @@
 
       .literatureTitleList {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
         position: absolute;
         top: @searchHeight;
         bottom: 0px;
