--- a/src/app/sharedComponents/artCarousel/artCarousel.component.less
+++ b/src/app/sharedComponents/artCarousel/artCarousel.component.less
@@ -50,6 +50,7 @@
   .imageGrid {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 
     .carouselThumb {
       position: relative;
